crates/edm-core/tests/snapshots/views__inventory_empty_w48.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit(blocks, width)"
---
== INVENTORY  empty ============================
