crates/edm-core/tests/snapshots/views__market_points_w100.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit(blocks, width)"
---
== MARKETS  Colonia ================================================================================
+------------+----------------+-------+-----+-----+-----------+------------+-----------------+
|  Market ID | Name           | CBOYF | Imp | Exp | Dist (Ls) | Economy    | Faction         |
+============+================+=======+=====+=====+===========+============+=================+
| STARPORT  1 | 1 with a commodity market                                                    |
+------------+----------------+-------+-----+-----+-----------+------------+-----------------+
| 3223343616 | Jaques Station | CBOYF |   3 |   1 |       713 | Tourism    | Colonia Council |
+------------+----------------+-------+-----+-----+-----------+------------+-----------------+
| OUTPOST  1 | 0 with a commodity market                                                     |
+------------+----------------+-------+-----+-----+-----------+------------+-----------------+
| 3223343617 | Brady Terminal | ....F |   - |   - |       241 | Industrial | Colonia Council |
+------------+----------------+-------+-----+-----+-----------+------------+-----------------+
| CARRIER  2 | 1 with a commodity market                                                     |
+------------+----------------+-------+-----+-----+-----------+------------+-----------------+
| 3705689345 | A1B-C2D        | C.... |   - |   - |         - | -          | Colonia Council |
| 3705689344 | K7Q-B0X        | C...F |   1 |   - |         - | -          | Colonia Council |
+------------+----------------+-------+-----+-----+-----------+------------+-----------------+
| SURFACESTATION  1 | 1 with a commodity market                                              |
+------------+----------------+-------+-----+-----+-----------+------------+-----------------+
| 3806349056 | Colonia Hub    | CB... |   - |   1 |        12 | Extraction | Colonia Council |
+------------+----------------+-------+-----+-----+-----------+------------+-----------------+
   columns hidden to fit 100 cols: Body
   CBOYF = Commodities/Blackmarket/Outfitting/shipYard/reFuel service available | Imp,Exp =
   commodities traded
