crates/edm-core/tests/snapshots/views__market_snapshot_w200.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit(blocks, width)"
---
== MARKET SUMMARY ======================================================================================================================================================================================
+-----------------------+---------------------------------------+
| Field                 | Value                                 |
+=======================+=======================================+
| credits               | 12,345,678 cr                         |
| debt                  | 0 cr                                  |
| lastModified          | 1700000000 (2023-11-14T22:13:20.000Z) |
| commodities           | 7 in 5 categories                     |
| supplied (stock > 0)  | 4                                     |
| in demand             | 3                                     |
| consumers / producers | 2 / 3                                 |
| rare / illegal        | 2 / 1                                 |
| allowsDumping         | yes                                   |
| inventory items       | 3                                     |
+-----------------------+---------------------------------------+
== INVENTORY  3 items ==================================================================================================================================================================================
+-----------------+-----+-----------+---+--------+-----------+------------+----------------------------+
| Commodity       | Qty |     Value | S | Marked |     Owner |     Origin | Position (x / y / z)       |
+=================+=====+===========+===+========+===========+============+============================+
| Gold            | 117 | 1,088,217 | . |      - |         0 | 3223343616 | -9530.7 / -910.3 / 19808.1 |
| Basic Narcotics |   4 |     4,404 | S |      1 | 128000000 |          0 | -                          |
| ?               |   - |         - | . |      - |         0 |          0 | -                          |
+-----------------+-----+-----------+---+--------+-----------+------------+----------------------------+
== COMMODITIES  7 entries in 5 categories ==============================================================================================================================================================
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
|        ID | Commodity          |   Stock | Stk |   Buy |   Sell | Fence | Demand | Dmd |   Mean | CPRI |
+===========+====================+=========+=====+=======+========+=======+========+=====+========+======+
| CHEMICALS  2 items | 2 supplied | 0 in demand                                                          |
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
| 128049152 | Explosives         |  41,231 | ### |   312 |    296 |     - |      - | ... |    305 | .P.. |
| 128049672 | Hydrogen Fuel      | 964,532 | ### |   110 |    104 |     - |      - | ... |    108 | .P.. |
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
| METALS  2 items | 1 supplied | 1 in demand                                                             |
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
| 128049202 | Gold               |       - | ... |     - |  9,301 | 9,280 |    812 | ##. |  9,401 | C... |
| 128049204 | Silver             |       2 | #.. | 4,820 |  4,791 |     - |      - | ... |  4,775 | .P.. |
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
| NARCOTICS  1 items | 0 supplied | 1 in demand                                                          |
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
| 128049669 | Basic Narcotics    |       - | ... |     - |  1,301 | 1,120 |  5,240 | ### |  1,108 | C.RI |
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
| NONMARKETABLE  1 items | 0 supplied | 0 in demand                                                      |
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
| 128673855 | Limpet             |       - | ... |   101 |      - |     - |      - | ... |    100 | .... |
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
| UNCATEGORISED  1 items | 1 supplied | 1 in demand                                                      |
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
| 128924331 | Unclassified Relic |       1 | ... |     - | 82,640 |     - |      1 | #.. | 80,000 | ..R. |
+-----------+--------------------+---------+-----+-------+--------+-------+--------+-----+--------+------+
   legend: '-' zero | CPRI = Consumer/Producer/Rare/Illegal | Stk,Dmd meters '###' bracket 3 .. '...' bracket 0 | '~' truncated
