crates/edm-core/tests/snapshots/views__market_snapshot_w48.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit(blocks, width)"
---
== MARKET SUMMARY ==============================
+-----------------------+----------------------+
| Field                 | Value                |
+=======================+======================+
| credits               | 12,345,678 cr        |
| debt                  | 0 cr                 |
| lastModified          | 1700000000 (2023-11~ |
| commodities           | 7 in 5 categories    |
| supplied (stock > 0)  | 4                    |
| in demand             | 3                    |
| consumers / producers | 2 / 3                |
| rare / illegal        | 2 / 1                |
| allowsDumping         | yes                  |
| inventory items       | 3                    |
+-----------------------+----------------------+
== INVENTORY  3 items ==========================
+-----------------+-----+-----------+---+
| Commodity       | Qty |     Value | S |
+=================+=====+===========+===+
| Gold            | 117 | 1,088,217 | . |
| Basic Narcotics |   4 |     4,404 | S |
| ?               |   - |         - | . |
+-----------------+-----+-----------+---+
   columns hidden to fit 48 cols: Marked, Owner,
   Origin, Position (x / y / z)
== COMMODITIES  7 entries in 5 categories ======
+--------------------+-------+--------+------+
| Commodity          |   Buy |   Sell | CPRI |
+====================+=======+========+======+
| CHEMICALS  2 items | 2 supplied | 0 in de~ |
+--------------------+-------+--------+------+
| Explosives         |   312 |    296 | .P.. |
| Hydrogen Fuel      |   110 |    104 | .P.. |
+--------------------+-------+--------+------+
| METALS  2 items | 1 supplied | 1 in demand |
+--------------------+-------+--------+------+
| Gold               |     - |  9,301 | C... |
| Silver             | 4,820 |  4,791 | .P.. |
+--------------------+-------+--------+------+
| NARCOTICS  1 items | 0 supplied | 1 in de~ |
+--------------------+-------+--------+------+
| Basic Narcotics    |     - |  1,301 | C.RI |
+--------------------+-------+--------+------+
| NONMARKETABLE  1 items | 0 supplied | 0 i~ |
+--------------------+-------+--------+------+
| Limpet             |   101 |      - | .... |
+--------------------+-------+--------+------+
| UNCATEGORISED  1 items | 1 supplied | 1 i~ |
+--------------------+-------+--------+------+
| Unclassified Relic |     - | 82,640 | ..R. |
+--------------------+-------+--------+------+
   columns hidden to fit 48 cols: ID, Fence,
   Mean, Stk, Dmd, Stock, Demand
   legend: '-' zero | CPRI =
   Consumer/Producer/Rare/Illegal | Stk,Dmd
   meters '###' bracket 3 .. '...' bracket 0 |
   '~' truncated
