crates/edm-core/tests/snapshots/views__opaque_json_w48.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit_all(&parsed, width)"
---
== PAYLOAD =====================================
{
  "errors": [
    {
      "code": 401,
      "message": "unauthorized"
    }
  ]
}
